<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <RadioGroup
        android:id="@+id/radGrpRentals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radTenFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radTenFeet"
            android:textSize="20sp"/>

        <RadioButton
            android:id="@+id/radSeventeenFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radSeventeenFeet"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>

        <RadioButton
            android:id="@+id/radTwentySixFeet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radTwentySixFeet"
            android:textSize="20sp"
            android:layout_marginTop="5dp"/>
    </RadioGroup>

    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hint"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:layout_below="@+id/radGrpRentals"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCalculate"
        android:layout_below="@+id/txtMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="357dp"
        android:layout_height="293dp"
        app:srcCompat="@drawable/opening"
        android:contentDescription="@string/imgDescription"
        android:layout_below="@+id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>


</RelativeLayout>